html edited again

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <div class="container-fluid p-0 m-0">
-        <div class="d-flex justify-content-around">
+        <div class="d-lg-flex d-md-grid justify-content-around">
             <aside class="col-xl-3 col-lg-3 sidebar">
                 <h1 class="text-center m-4 py-2 border fw-bolder rounded sidebar-title mb-5">Products</h1>
 
